@@ -145,7 +145,7 @@
 #define HS_LDFILE_SBHDLE 171
 #define HS_LDFILE_SBPGUP 172
 #define HS_LDFILE_SBPGDN 173
-#define HS_LDFILE_SBDN 174
+#define HS_LDFILE_SBDOWN 174
 #define HS_LDFILE_LOAD 175
 #define HS_LDFILE_EXIT 176
 #define HS_SSTATE_SSTATE 179
